--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "username": "root",
+    "username": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
     "password": null,
     "database": "exampledb",
     "host": "localhost",
