Basic tables and 'tasks' table creation sequelized

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,14 +6,15 @@
     },
     "extends": "prettier",
     "plugins": [
-        "prettier"
+        "prettier",
+        "Beautify"
       ],
     "rules": {
         "no-duplicate-case":"error",
         "no-empty":"error",
         "no-extra-semi":"error",
         "no-func-assign": "error",
-        "no-irregular-whitespace":"error",
+        // "no-irregular-whitespace":"error",
         "no-unreachable": "error",
         "curly": "error",
         "dot-notation": "error",
