--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-handlebars-boilerplate",
+  "name": "team-orginizer",
   "version": "1.0.0",
-  "description": "Project 2 Starter",
+  "description": "Project 2",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -14,6 +14,10 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.1",
+    "bcrypt-nodejs": "0.0.3",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "mysql2": "^1.6.5",
     "sequelize": "^5.8.6"
   },
