Fixing environmental variables and general query.

--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,13 @@
 {
  
+  "development": {
+    "username": "process.env.USER_NAME_2",
+    "password": "process.env.PASSWORD_2",
+    "database": "process.env.DATABASE_2",
+    "port": 3306,
+    "host": "localhost",
+    "dialect": "mysql"
+  },
   "production": {
     "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql"
