--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bcrypt-nodejs": "0.0.3",
+    "bootstrap": "^4.3.1",
     "concurrently": "^4.1.1",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
@@ -33,6 +34,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "react-bootstrap": "^1.0.0-beta.10",
     "sequelize": "^5.8.6",
     "util": "^0.12.0"
   },
