--- a/package.json
+++ b/package.json
@@ -29,14 +29,16 @@
     "express-session": "^1.16.2",
     "if-env": "^1.0.4",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "react-bootstrap": "^1.0.0-beta.10",
+    "react-moment": "^0.9.2",
     "sequelize": "^5.10.3",
-    "util": "^0.12.0",
-    "react-bootstrap": "^1.0.0-beta.10"
+    "util": "^0.12.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
