--- a/package.json
+++ b/package.json
@@ -38,6 +38,13 @@
     "react-bootstrap": "^1.0.0-beta.10",
     "react-moment": "^0.9.2",
     "sequelize": "^5.10.3",
+    "mongoose": "^5.6.7",
+    "morgan": "^1.9.1",
+    "cookie-parser": "^1.4.4",
+    "body-parser": "^1.19.0",
+    "nodemailer": "^6.3.0",
+    "http-proxy-middleware": "^0.19.1",
+    "jade": "~1.11.0",
     "util": "^0.12.0"
   },
   "devDependencies": {
