--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "concurrently": "^4.1.1",
     "cookie-parser": "^1.4.4",
@@ -29,7 +30,9 @@
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.2",
+    "http-proxy-middleware": "^0.19.1",
     "if-env": "^1.0.4",
+    "jade": "~1.11.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
     "mongoose": "^5.6.8",
@@ -42,11 +45,9 @@
     "path": "^0.12.7",
     "react-bootstrap": "^1.0.0-beta.10",
     "react-moment": "^0.9.2",
+    "react-scroll": "^1.7.12",
     "sequelize": "^5.10.3",
     "socket.io": "1.7.3",
-    "body-parser": "^1.19.0",
-    "http-proxy-middleware": "^0.19.1",
-    "jade": "~1.11.0",
     "util": "^0.12.0"
   },
   "devDependencies": {
