--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,14 @@
   "proxy": "http://localhost:3300/",
   "dependencies": {
     "axios": "^0.19.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0",
+    "react-com": "^1.0.6",
+    "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "react-scroll": "^1.7.12",
+    "react-scripts": "^3.1.1",
+    "react-scroll": "^1.7.14",
     "save": "^2.4.0",
-    "socket.io-client": "1.7.3"
+    "socket.io-client": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
