--- a/package.json
+++ b/package.json
@@ -22,11 +22,10 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
-    "concurrently": "^4.1.1",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.2",
@@ -35,7 +34,7 @@
     "jade": "~1.11.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
-    "mongoose": "^5.6.8",
+    "mongoose": "^5.6.11",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
@@ -43,20 +42,21 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "react-bootstrap": "^1.0.0-beta.10",
+    "pug": "^2.0.4",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-moment": "^0.9.2",
-    "react-scroll": "^1.7.12",
-    "sequelize": "^5.10.3",
-    "socket.io": "1.7.3",
+    "react-scroll": "^1.7.14",
+    "sequelize": "^5.16.0",
+    "socket.io": "^2.2.0",
     "util": "^0.12.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "concurrently": "^4.1.2",
     "cross-env": "^5.2.0",
-    "concurrently": "^4.1.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.3.0",
+    "eslint": "^6.2.2",
+    "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-prettier": "^3.1.0",
     "mocha": "^6.1.4",
     "nodemon": "^1.19.1",
